# VM

./: .gitignore  README.md  VM.sln  create_snap.py  ini.py  read_gsd.py
ACMq4/: ACMq4.cpp  ACMq4.h  ACMq4.vcxproj  ACMq4.vcxproj.filters  main.cpp  show_fields.py
AIM/: AIM.cpp  AIM.h  AIM.vcxproj  AIM.vcxproj.filters  full_serials.py  main.cpp  q_serials.py  show_fields.py
AsymVM/: AsymVM.vcxproj  AsymVM.vcxproj.filters  Par.cpp  Par.h  cond_order_para.py  create_snap.py  exporter.cpp  exporter.h  grid.h  main.cpp  makefile  particle.cpp  particle.h  read_gsd.py  run.h
NRVM/: grid.h  main.cpp  particle.cpp  particle.h  vm.h
NematicLAG/: NematicLAG.vcxproj  NematicLAG.vcxproj.filters  comn.h  main.cpp  nematic_lattice_gas.cpp  nematic_lattice_gas.h  show_fields.py
VM/: Par.cpp  Par.h  README.md  VM.vcxproj  VM.vcxproj.filters  cmdline.h  comn.cpp  comn.h  disorder.cpp  disorder.h  exporter.cpp  exporter.h  grid.cpp  grid.h  io_data.cpp  io_data.h  iodata.cpp  iodata.h  main.cpp  makefile  node.cpp  node.h  output.cpp  output.h  rand.h  run.cpp  run.h  spatial_corr.cpp  spatial_corr.h
VM_metric_free/: CMakeLists.txt  README.md  bird.cpp  bird.h  cell_list.h  config.h  io_data.cpp  io_data.h  main.cpp  metric_free_vm.cpp  metric_free_vm.h  metric_free_vm.i  order_para.py  particle.cpp  particle.h  rand.h  vm.cpp  vm.h  vm_metric_free.cpp  vm_topo.h
VM_metric_free/test/: CMakeLists.txt  test.cpp
VM_quenched/: README.md  VM_quenched.vcxproj  VM_quenched.vcxproj.filters  configure.h  main.cpp  output.cpp  output.h  particle.cpp  particle.h  run.h
VM_smectic/: VM_smectic.cpp  VM_smectic.vcxproj  VM_smectic.vcxproj.filters  config.h  exporter.cpp  exporter.h  particle.cpp  particle.h
VM_voro/: CMakeLists.txt  create_snap.py  io2D.h  main.cpp  vm_voro.h
VMpy/: README.md  VMpy.cpp  VMpy.h  VMpy.i  VMpy.py  VMpy.vcxproj  VMpy.vcxproj.filters  animate.py  defect.py  makefile  test_VMpy.py
XYmodel/: README.md  XYmodel.cpp  XYmodel.h  XYmodel.i  XYmodel.py  XYmodel.vcxproj  XYmodel.vcxproj.filters  makefile  testXYmodel.py
cVM/: README.md  bird.cpp  bird.h  cVM.py  cVM.vcxproj  cVM.vcxproj.filters  cell_list.h  main.cpp
cVMpy/: cVMpy.cpp  cVMpy.h  cVMpy.i  cVMpy.py  cVMpy.vcxproj  cVMpy.vcxproj.filters  test_cVM.py
